fixed gallery spacing (hopefully)

--- a/src/App.css
+++ b/src/App.css
@@ -323,7 +323,8 @@
 }
 .galleryimg{
   width:100%;
-border:2px solid black;
+  border:2px solid black;
+  height:100%;
 }
 .galleryimgtitle{
   width:100%;
